5minute timeframe values updated

--- a/10timeframe.ipynb
+++ b/10timeframe.ipynb
@@ -129,7 +129,55 @@
      "text": [
       "Assortativity coefficient for attack graph: -0.024774727285235675\n",
       "Assortativity coefficient for non-attack graph: -0.004734935299806067\n",
-      "Assortativity coefficient for overall graph: -0.0012147406034415723\n"
+      "Assortativity coefficient for overall graph: -0.0012147406034415723\n",
+      "Average betweenness centrality for attack graph: 0.0\n",
+      "Average betweenness centrality for non-attack graph: 3.617113664367776e-13\n",
+      "Average betweenness centrality for overall graph: 2.9232558081299413e-13\n",
+      "Average closeness centrality for attack graph: 0.0006600273066706266\n",
+      "Average closeness centrality for non-attack graph: 4.490024371290998e-05\n",
+      "Average closeness centrality for overall graph: 4.211184793607937e-05\n",
+      "Average clustering coefficient for attack graph: 0.0\n",
+      "Average clustering coefficient for non-attack graph: 0.0\n",
+      "Average clustering coefficient for overall graph: 0.0\n",
+      "Average degree for attack graph: 1.731911652703732\n",
+      "Average degree for non-attack graph: 1.5878760461434065\n",
+      "Average degree for overall graph: 1.5988411904134843\n",
+      "Average degree centrality for attack graph: 0.0013200546133412332\n",
+      "Average degree centrality for non-attack graph: 8.979675655397449e-05\n",
+      "Average degree centrality for overall graph: 8.422045882913907e-05\n",
+      "Average eigenvector centrality for attack graph: 0.00030639958388643595\n",
+      "Average eigenvector centrality for non-attack graph: 9.794451524365966e-05\n",
+      "Average eigenvector centrality for overall graph: 9.123259455195562e-05\n",
+      "Average in-degree for attack graph: 0.865955826351866\n",
+      "Average in-degree for non-attack graph: 0.7939380230717032\n",
+      "Average in-degree for overall graph: 0.7994205952067421\n",
+      "Average out-degree for attack graph: 0.865955826351866\n",
+      "Average out-degree for non-attack graph: 0.7939380230717032\n",
+      "Average out-degree for overall graph: 0.7994205952067421\n",
+      "Average PageRank score for attack graph: 0.0007616146230007408\n",
+      "Average PageRank score for non-attack graph: 5.6548292241562426e-05\n",
+      "Average PageRank score for overall graph: 5.267316302342757e-05\n",
+      "Average shortest path length for attack graph: None\n",
+      "Average shortest path length for non-attack graph: None\n",
+      "Average shortest path length for overall graph: None\n",
+      "Density for attack graph: 0.0006600273066706295\n",
+      "Density for non-attack graph: 4.489837827697242e-05\n",
+      "Density for overall graph: 4.211022941459872e-05\n",
+      "Diameter for attack graph: None\n",
+      "Diameter for non-attack graph: None\n",
+      "Diameter for overall graph: None\n",
+      "Number of Louvain communities detected in attack graph: 177\n",
+      "Number of Louvain communities detected in non-attack graph: 3705\n",
+      "Number of Louvain communities detected in overall graph: 3869\n",
+      "Number of strongly connected components in attack graph: 1313\n",
+      "Number of strongly connected components in non-attack graph: 17683\n",
+      "Number of strongly connected components in overall graph: 18984\n",
+      "Number of weakly connected components in attack graph: 176\n",
+      "Number of weakly connected components in non-attack graph: 3662\n",
+      "Number of weakly connected components in overall graph: 3826\n",
+      "Reciprocity for attack graph: 0.0\n",
+      "Reciprocity for non-attack graph: 0.00014245014245014244\n",
+      "Reciprocity for overall graph: 0.00013177834881728933\n"
      ]
     }
    ],
@@ -352,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,9 +471,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes in the attack graph:  1316\n",
+      "Number of edges in the attack graph:  1139\n",
+      "Number of nodes in the non-attack graph:  17296\n",
+      "Number of edges in the non-attack graph:  13639\n",
+      "Number of nodes in the overall graph:  18600\n",
+      "Number of edges in the overall graph:  14778\n"
+     ]
+    }
+   ],
    "source": [
     "#print the number of nodes and edges of the graph\n",
     "print(\"Number of nodes in the attack graph: \", attackG_10_4_10_3_10_2_10_1.number_of_nodes())\n",
@@ -438,72 +499,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\ProgramData\\anaconda3\\Lib\\site-packages\\networkx\\algorithms\\assortativity\\mixing.py:207: RuntimeWarning: invalid value encountered in divide\n",
-      "  a = a / a.sum()\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assortativity coefficient for attack graph: -0.07492264242550674\n",
-      "Assortativity coefficient for non-attack graph: nan\n",
-      "Assortativity coefficient for overall graph: 0.05402276678235315\n",
-      "Average betweenness centrality for attack graph: 0.0\n",
-      "Average betweenness centrality for non-attack graph: 0.0\n",
-      "Average betweenness centrality for overall graph: 3.1086511984455566e-11\n",
-      "Average closeness centrality for attack graph: 0.008767189095057935\n",
-      "Average closeness centrality for non-attack graph: 0.0\n",
-      "Average closeness centrality for overall graph: 0.0003408196916208675\n",
-      "Average clustering coefficient for attack graph: 0.0\n",
-      "Average clustering coefficient for non-attack graph: 0.0\n",
-      "Average clustering coefficient for overall graph: 0.0\n",
-      "Average degree for attack graph: 3.191256830601093\n",
-      "Average degree for non-attack graph: 0.0\n",
-      "Average degree for overall graph: 2.7310379241516967\n",
-      "Average degree centrality for attack graph: 0.017534378190115878\n",
-      "Average degree centrality for non-attack graph: 0.0\n",
-      "Average degree centrality for overall graph: 0.000681566739244242\n",
-      "Average eigenvector centrality for attack graph: 0.049055319318158125\n",
-      "Average eigenvector centrality for non-attack graph: 9.503233423581156e-05\n",
-      "Average eigenvector centrality for overall graph: 0.00043214840508205523\n",
-      "Average in-degree for attack graph: 1.5956284153005464\n",
-      "Average in-degree for non-attack graph: 0.0\n",
-      "Average in-degree for overall graph: 1.3655189620758483\n",
-      "Average out-degree for attack graph: 1.5956284153005464\n",
-      "Average out-degree for non-attack graph: 0.0\n",
-      "Average out-degree for overall graph: 1.3655189620758483\n",
-      "Average PageRank score for attack graph: 0.005464480874316937\n",
-      "Average PageRank score for non-attack graph: 0.0002604845011722132\n",
-      "Average PageRank score for overall graph: 0.00024950099800401287\n",
-      "Average shortest path length for attack graph: None\n",
-      "Average shortest path length for non-attack graph: 0\n",
-      "Average shortest path length for overall graph: None\n",
-      "Density for attack graph: 0.008767189095057948\n",
-      "Density for non-attack graph: 0\n",
-      "Density for overall graph: 0.0003407833696221234\n",
-      "Diameter for attack graph: None\n",
-      "Diameter for non-attack graph: 0\n",
-      "Diameter for overall graph: None\n",
-      "Number of Louvain communities detected in attack graph: 4\n",
-      "Number of Louvain communities detected in non-attack graph: 0\n",
-      "Number of Louvain communities detected in overall graph: 13\n",
-      "Number of strongly connected components in attack graph: 183\n",
-      "Number of strongly connected components in non-attack graph: 3839\n",
-      "Number of strongly connected components in overall graph: 4007\n",
-      "Number of weakly connected components in attack graph: 1\n",
-      "Number of weakly connected components in non-attack graph: 3839\n",
-      "Number of weakly connected components in overall graph: 4\n",
-      "Reciprocity for attack graph: 0.0\n",
-      "Reciprocity for non-attack graph: None\n",
-      "Reciprocity for overall graph: 0.0003654302941713868\n"
+      "Assortativity coefficient for attack graph: -0.024107417535121495\n",
+      "Assortativity coefficient for non-attack graph: -0.006882868190589801\n",
+      "Assortativity coefficient for overall graph: -0.003634590981980655\n"
      ]
     }
    ],
