reordering the file system

--- a/Phase2BaselineModelPerformanceReduction.ipynb
+++ b/Phase2BaselineModelPerformanceReduction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_15196\\163669101.py:1: DtypeWarning: Columns (1,3,39,47) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_2220\\163669101.py:1: DtypeWarning: Columns (1,3,39,47) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(r'D:\\Project Phase II\\Dataset\\completedataset.csv',encoding='cp1252')\n"
      ]
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -4363,6 +4363,295 @@
     "    print(\"AUC Scores for each class:\", auc_scores)\n",
     "    print('-----------------------------------------------------------------------------------')\n",
     "    print('-----------------------------------------------------------------------------------')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove the other unwanted columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_2220\\3370251438.py:1: DtypeWarning: Columns (1,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(r'D:\\Project Phase II\\Dataset\\phase2labelencodeddataset.csv',encoding='cp1252')\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(r'D:\\Project Phase II\\Dataset\\phase2labelencodeddataset.csv',encoding='cp1252')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv(r'D:\\Project Phase II\\Dataset\\train.csv',encoding='cp1252')\n",
+    "test = pd.read_csv(r'D:\\Project Phase II\\Dataset\\test.csv',encoding='cp1252')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "todrop = ['srcip','sport','dstip','dsport','Stime','Ltime','attack_cat', 'sttl','ct_state_ttl']\n",
+    "train = train.drop(todrop, axis = 1)\n",
+    "test = test.drop(todrop, axis = 1)\n",
+    "train = train.drop_duplicates()\n",
+    "test = test.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = train.drop(['Label'], axis = 1)\n",
+    "y_train = train['Label']\n",
+    "\n",
+    "X_test = test.drop(['Label'], axis = 1)\n",
+    "y_test = test['Label']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decision Tree and its importance ranking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sttl: 0.9598604612638756\n",
+      "tcprtt: 0.0031931285229357524\n",
+      "dtcpb: 0.002790979508138019\n",
+      "dbytes: 0.0024976342767277014\n",
+      "stcpb: 0.002469027638081055\n",
+      "ackdat: 0.0023586617917545137\n",
+      "synack: 0.0021848241636572853\n",
+      "Dload: 0.0020980450483703964\n",
+      "sbytes: 0.0017444701521762947\n",
+      "state: 0.0015974867502420275\n",
+      "ct_state_ttl: 0.0015358622648859194\n",
+      "dur: 0.0014867911067034823\n",
+      "smeansz: 0.0014736123026637456\n",
+      "Sjit: 0.0014541970349871798\n",
+      "ct_srv_dst: 0.0014461178733577165\n",
+      "Sload: 0.001426029576383216\n",
+      "Sintpkt: 0.0012132460663494627\n",
+      "Dintpkt: 0.0011739826603547508\n",
+      "dmeansz: 0.0011660000041556146\n",
+      "Djit: 0.001098150377384562\n",
+      "ct_dst_ltm: 0.000980023267925962\n",
+      "sloss: 0.0007251649217869243\n",
+      "ct_src_ ltm: 0.0007249273363138354\n",
+      "ct_srv_src: 0.000697584490822078\n",
+      "ct_dst_src_ltm: 0.0006024329323684993\n",
+      "res_bdy_len: 0.0003338742431895048\n",
+      "ct_src_dport_ltm: 0.00026327598693451376\n",
+      "dttl: 0.00019002173133700763\n",
+      "ct_flw_http_mthd: 0.00016677815311384012\n",
+      "Spkts: 0.00016354449859634423\n",
+      "trans_depth: 0.00016284557042724442\n",
+      "proto: 0.00014456692535581644\n",
+      "Dpkts: 0.00013345718529475918\n",
+      "swin: 0.00011861004969329174\n",
+      "ct_dst_sport_ltm: 9.839867988838554e-05\n",
+      "is_ftp_login: 9.176821181788449e-05\n",
+      "service: 5.2294231247882474e-05\n",
+      "ct_ftp_cmd: 4.4495384059771866e-05\n",
+      "dloss: 3.722781664221082e-05\n",
+      "dwin: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a decision tree and train it\n",
+    "decision_tree = DecisionTreeClassifier()\n",
+    "decision_tree.fit(X_train, y_train)\n",
+    "\n",
+    "# Find the feature importances\n",
+    "feature_importances = decision_tree.feature_importances_\n",
+    "\n",
+    "# Sort the feature importances\n",
+    "sorted_indices = np.argsort(feature_importances)[::-1]\n",
+    "sorted_features = [X_train.columns[i] for i in sorted_indices]\n",
+    "sorted_importances = [feature_importances[i] for i in sorted_indices]\n",
+    "\n",
+    "# Print the sorted feature importances\n",
+    "for feature, importance in zip(sorted_features, sorted_importances):\n",
+    "    print(f\"{feature}: {importance}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "without sttl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ct_state_ttl: 0.9503102167546406\n",
+      "dttl: 0.011980985250935933\n",
+      "synack: 0.003979830257613693\n",
+      "stcpb: 0.0028777291544520825\n",
+      "dtcpb: 0.002691449838659846\n",
+      "smeansz: 0.002670493262802607\n",
+      "ackdat: 0.002557251639341623\n",
+      "sbytes: 0.0022926714142647428\n",
+      "Dload: 0.00193788333362926\n",
+      "tcprtt: 0.001706903388045523\n",
+      "ct_srv_dst: 0.001630407740809051\n",
+      "ct_srv_src: 0.001603199642607703\n",
+      "Sload: 0.0015179931927314552\n",
+      "Sintpkt: 0.0014986145860480756\n",
+      "Sjit: 0.001496723000078696\n",
+      "Dintpkt: 0.0014115810996651577\n",
+      "Djit: 0.0012360036190233372\n",
+      "dbytes: 0.0010895066596709245\n",
+      "dur: 0.0010889739657493108\n",
+      "sloss: 0.0008217590455344789\n",
+      "ct_dst_src_ltm: 0.0007726071684038266\n",
+      "ct_src_ ltm: 0.0006818423616774256\n",
+      "dmeansz: 0.0004991564921608542\n",
+      "ct_dst_ltm: 0.0004963196759115563\n",
+      "proto: 0.00021047708387236504\n",
+      "res_bdy_len: 0.0001803402585512381\n",
+      "dloss: 0.00013743870841973835\n",
+      "ct_src_dport_ltm: 0.00010812310466202247\n",
+      "Dpkts: 0.00010779506542724577\n",
+      "ct_flw_http_mthd: 0.00010390423565263385\n",
+      "Spkts: 8.013963020035228e-05\n",
+      "ct_dst_sport_ltm: 7.871925776184085e-05\n",
+      "ct_ftp_cmd: 4.4796353309131174e-05\n",
+      "is_ftp_login: 3.8909983509834666e-05\n",
+      "service: 3.4423611399393426e-05\n",
+      "swin: 2.42538897211303e-05\n",
+      "state: 5.762730554606254e-07\n",
+      "dwin: 0.0\n",
+      "trans_depth: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a decision tree and train it\n",
+    "decision_tree = DecisionTreeClassifier()\n",
+    "decision_tree.fit(X_train, y_train)\n",
+    "\n",
+    "# Find the feature importances\n",
+    "feature_importances = decision_tree.feature_importances_\n",
+    "\n",
+    "# Sort the feature importances\n",
+    "sorted_indices = np.argsort(feature_importances)[::-1]\n",
+    "sorted_features = [X_train.columns[i] for i in sorted_indices]\n",
+    "sorted_importances = [feature_importances[i] for i in sorted_indices]\n",
+    "\n",
+    "# Print the sorted feature importances\n",
+    "for feature, importance in zip(sorted_features, sorted_importances):\n",
+    "    print(f\"{feature}: {importance}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "without sttl and ct_state_ttl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dttl: 0.8182407495547448\n",
+      "state: 0.14045964399968824\n",
+      "dbytes: 0.005681925719142626\n",
+      "Sload: 0.00343669395297432\n",
+      "dtcpb: 0.00299722405044316\n",
+      "stcpb: 0.0025799445874176473\n",
+      "ackdat: 0.002480835105842955\n",
+      "Dload: 0.0022176149279923155\n",
+      "tcprtt: 0.002041717324567916\n",
+      "synack: 0.001939485070130847\n",
+      "sbytes: 0.0018967760845193542\n",
+      "smeansz: 0.0016048023971321893\n",
+      "Djit: 0.0015577355245825538\n",
+      "Dintpkt: 0.001372455633837228\n",
+      "Sjit: 0.0012996084920014618\n",
+      "ct_srv_dst: 0.001232528476999792\n",
+      "dur: 0.0012115134174477322\n",
+      "Sintpkt: 0.0010642144259671647\n",
+      "dmeansz: 0.0009397144137260795\n",
+      "ct_dst_src_ltm: 0.0009349965123613722\n",
+      "ct_src_ ltm: 0.0008926245179554431\n",
+      "ct_dst_ltm: 0.0006920955768016387\n",
+      "ct_srv_src: 0.0006824715347848011\n",
+      "sloss: 0.0005641931992955725\n",
+      "dloss: 0.0005100059881082952\n",
+      "ct_src_dport_ltm: 0.00035878168137363624\n",
+      "res_bdy_len: 0.00033217169890788044\n",
+      "Spkts: 0.0002848382187283915\n",
+      "ct_dst_sport_ltm: 0.00020638975118542625\n",
+      "proto: 9.261391123402212e-05\n",
+      "service: 7.37098391077247e-05\n",
+      "is_ftp_login: 5.91759367541379e-05\n",
+      "Dpkts: 3.901086124486042e-05\n",
+      "ct_ftp_cmd: 2.173761299848271e-05\n",
+      "trans_depth: 0.0\n",
+      "ct_flw_http_mthd: 0.0\n",
+      "swin: 0.0\n",
+      "dwin: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a decision tree and train it\n",
+    "decision_tree = DecisionTreeClassifier()\n",
+    "decision_tree.fit(X_train, y_train)\n",
+    "\n",
+    "# Find the feature importances\n",
+    "feature_importances = decision_tree.feature_importances_\n",
+    "\n",
+    "# Sort the feature importances\n",
+    "sorted_indices = np.argsort(feature_importances)[::-1]\n",
+    "sorted_features = [X_train.columns[i] for i in sorted_indices]\n",
+    "sorted_importances = [feature_importances[i] for i in sorted_indices]\n",
+    "\n",
+    "# Print the sorted feature importances\n",
+    "for feature, importance in zip(sorted_features, sorted_importances):\n",
+    "    print(f\"{feature}: {importance}\")"
    ]
   }
  ],
