added lstm code

--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -6826,32 +6826,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. LSTM for STTL & CT_STATE_TTL"
+    "Refer Phase2ParallelRunning.ipynb for other LSTM and GRU"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Sample 1% of the dataset\n",
-    "dfsample = df.sample(frac=0.01, random_state=42)\n",
-    "\n",
-    "nodes = set()\n",
-    "for i in range(len(dfsample)):\n",
-    "    src = str(dfsample['srcip'].iloc[i])+':'+str(dfsample['sport'].iloc[i])\n",
-    "    dst = str(dfsample['dstip'].iloc[i])+':'+str(dfsample['dsport'].iloc[i])\n",
-    "    nodes.add(src)\n",
-    "    nodes.add(dst)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
