--- a/neuralnets.ipynb
+++ b/neuralnets.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,9 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m train \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mProject Phase II\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDataset\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mtrain.csv\u001b[39m\u001b[38;5;124m'\u001b[39m,encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcp1252\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m test \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mProject Phase II\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDataset\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mtest.csv\u001b[39m\u001b[38;5;124m'\u001b[39m,encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcp1252\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "train = pd.read_csv(r'D:\\Project Phase II\\Dataset\\train.csv',encoding='cp1252')\n",
     "test = pd.read_csv(r'D:\\Project Phase II\\Dataset\\test.csv',encoding='cp1252')"
@@ -91,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +127,23 @@
     "trainLabel = reducedTrain['Label']\n",
     "testAttributes = reducedTest.drop(['srcip','sport','dstip','dsport','Label'], axis = 1)\n",
     "testLabel = reducedTest['Label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = reducedTrain\n",
+    "test = reducedTest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Author's train-test dataset preprocess"
    ]
   },
   {
@@ -503,7 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare the train test edge attributes"
+    "## Test PCA and LDA scores"
    ]
   },
   {
@@ -935,6 +964,255 @@
     "    print(\"AUC Scores for each class:\", auc_scores)\n",
     "    print('-----------------------------------------------------------------------------------')\n",
     "    print('-----------------------------------------------------------------------------------')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dimensionality Reduction Using LDA (25 dimensions to 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "\n",
+    "lda = LinearDiscriminantAnalysis(n_components = 1)\n",
+    "lda_x_train = lda.fit_transform(trainAttributes, trainLabel)\n",
+    "lda_x_test = lda.transform(testAttributes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Input Formation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train set: Form number of nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mspektral\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlayers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GCNConv, GATConv, GraphSageConv\n\u001b[0;32m      8\u001b[0m nodes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(train)):\n\u001b[0;32m     10\u001b[0m     src \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msrcip\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[i])\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msport\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[i])\n\u001b[0;32m     11\u001b[0m     dst \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdstip\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[i])\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdsport\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[i])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import Input, Dense, Dropout\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras import backend as K\n",
+    "from spektral.layers import GCNConv, GATConv, GraphSageConv\n",
+    "\n",
+    "nodes = set()\n",
+    "for i in range(len(train)):\n",
+    "    src = str(train['srcip'].iloc[i])+':'+str(train['sport'].iloc[i])\n",
+    "    dst = str(train['dstip'].iloc[i])+':'+str(train['dsport'].iloc[i])\n",
+    "    nodes.add(src)\n",
+    "    nodes.add(dst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(nodes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train set: construct adjacency matrix "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m adjacency_matrix \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;28mlen\u001b[39m(nodes), \u001b[38;5;28mlen\u001b[39m(nodes)), dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mfloat\u001b[39m)\n\u001b[0;32m      2\u001b[0m label_matrix \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;28mlen\u001b[39m(nodes), \u001b[38;5;28mlen\u001b[39m(nodes)))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Add the columns srcip:sport and dstip:dsport to the adjacency matrix\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "adjacency_matrix = np.zeros((len(nodes), len(nodes)), dtype=float)\n",
+    "label_matrix = np.zeros((len(nodes), len(nodes)))\n",
+    "\n",
+    "# Add the columns srcip:sport and dstip:dsport to the adjacency matrix\n",
+    "for i in range(len(train)):\n",
+    "    src = str(train['srcip'].iloc[i])+':'+str(train['sport'].iloc[i])\n",
+    "    dst = str(train['dstip'].iloc[i])+':'+str(train['dsport'].iloc[i])\n",
+    "    src_index = list(nodes).index(src)\n",
+    "    dst_index = list(nodes).index(dst)\n",
+    "    if train['Label'].iloc[i] == 1:\n",
+    "        adjacency_matrix[src_index, dst_index] = lda_x_train.iloc[i]\n",
+    "        label_matrix[src_index, dst_index] = 1  \n",
+    "    else:\n",
+    "        adjacency_matrix[src_index, dst_index] = lda_x_train.iloc[i]\n",
+    "\n",
+    "\n",
+    "# Flatten tuple values in the adjacency matrix\n",
+    "adjacency_matrix_flat = adjacency_matrix.reshape(-1, 1)\n",
+    "label_flat = label_matrix.reshape(-1, 1)\n",
+    "\n",
+    "adjacency_tensor = tf.convert_to_tensor(adjacency_matrix_flat, dtype=tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test set: Form number of nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes = set()\n",
+    "for i in range(len(test)):\n",
+    "    src = str(tes['srcip'].iloc[i])+':'+str(test['sport'].iloc[i])\n",
+    "    dst = str(test['dstip'].iloc[i])+':'+str(test['dsport'].iloc[i])\n",
+    "    nodes.add(src)\n",
+    "    nodes.add(dst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test set: Construct adjacency matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adjacency_matrix_test = np.zeros((len(nodes), len(nodes)), dtype=float)\n",
+    "label_matrix_test = np.zeros((len(nodes), len(nodes)))\n",
+    "\n",
+    "# Add the columns srcip:sport and dstip:dsport to the adjacency matrix\n",
+    "for i in range(len(test)):\n",
+    "    src = str(test['srcip'].iloc[i])+':'+str(test['sport'].iloc[i])\n",
+    "    dst = str(test['dstip'].iloc[i])+':'+str(test['dsport'].iloc[i])\n",
+    "    src_index = list(nodes).index(src)\n",
+    "    dst_index = list(nodes).index(dst)\n",
+    "    if test['Label'].iloc[i] == 1:\n",
+    "        adjacency_matrix_test[src_index, dst_index] = lda_x_test.iloc[i]\n",
+    "        label_matrix_test[src_index, dst_index] = 1  \n",
+    "    else:\n",
+    "        adjacency_matrix_test[src_index, dst_index] = lda_x_test.iloc[i]\n",
+    "\n",
+    "\n",
+    "# Flatten tuple values in the adjacency matrix\n",
+    "adjacency_matrix_test_flat = adjacency_matrix_test.reshape(-1, 1)\n",
+    "label_test_flat = label_matrix_test.reshape(-1, 1)\n",
+    "\n",
+    "adjacency_test_tensor = tf.convert_to_tensor(adjacency_matrix_test_flat, dtype=tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GCN Model Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_shape = adjacency_matrix_flat.shape[1:]  # Assuming each tuple has 2 attributes\n",
+    "hidden_units = 16\n",
+    "output_units = 1  # Binary classification\n",
+    "\n",
+    "def build_gcn(input_shape, hidden_units, output_units):\n",
+    "    X_in = Input(shape=input_shape)\n",
+    "    A_in = Input((input_shape[0], input_shape[0]))  # Adjacency matrix\n",
+    "\n",
+    "    graph_conv = GCNConv(hidden_units, 'relu')([X_in, A_in])\n",
+    "    graph_conv = Dropout(0.5)(graph_conv)\n",
+    "    graph_conv = GCNConv(hidden_units, 'relu')(graph_conv)\n",
+    "    graph_conv = Dropout(0.5)(graph_conv)\n",
+    "\n",
+    "    output = Dense(output_units, activation='sigmoid')(graph_conv)\n",
+    "\n",
+    "    model = Model(inputs=[X_in, A_in], outputs=output)\n",
+    "    return model\n",
+    "\n",
+    "gcn_model = build_gcn(input_shape, hidden_units, output_units)\n",
+    "gcn_model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy', 'precision', 'recall', 'f1-score'])\n",
+    "\n",
+    "history_gcn = gcn_model.fit([X, A], label_flat, epochs=2, batch_size=32, validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GCN Model Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GCN Model evaluation\n",
+    "gcn_predictions = gcn_model.predict(adjacency_matrix_test_flat)\n",
+    "gcn_predictions = (gcn_predictions > 0.5).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Generate classification report\n",
+    "gcn_report = classification_report(label_test_flat, gcn_predictions)\n",
+    "\n",
+    "print(\"Classification Report:\")\n",
+    "print(gcn_report)"
    ]
   },
   {
